Added free translate url, moved variables to config file

--- a/TwitchBadTranslationBot/App.config
+++ b/TwitchBadTranslationBot/App.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="botName" value="megapop2" />
+    <add key="authToken" value="oauth:" />
+    <add key="streamsToBot" value="mechapope1" />
+    <add key="commandName" value="!translate" />
+    <add key="commandCooldown" value="60" />
+    <add key="numTranslation" value="3" />
+    <add key="supportedLanguages" value="af,sq,az,eu,ca,hr,cs,da,nl,en,eo,et,tl,fi,fr,gl,de,ht,hu,is,id,ga,it,la,lv,lt,ms,mt,no,pl,pt,ro,sk,sl,es,sw,sv,tr,vi,cy" />
+  </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
     </startup>
