--- a/TwitchBadTranslationBot/App.config
+++ b/TwitchBadTranslationBot/App.config
@@ -6,8 +6,8 @@
     <add key="streamsToBot" value="mechapope1" />
     <add key="commandName" value="!translate" />
     <add key="commandCooldown" value="60" />
-    <add key="numTranslation" value="3" />
-    <add key="supportedLanguages" value="af,sq,az,eu,ca,hr,cs,da,nl,en,eo,et,tl,fi,fr,gl,de,ht,hu,is,id,ga,it,la,lv,lt,ms,mt,no,pl,pt,ro,sk,sl,es,sw,sv,tr,vi,cy" />
+    <add key="numTranslation" value="4" />
+    <add key="supportedLanguages" value="af,sq,am,ar,hy,az,eu,be,bn,bs,bg,ca,ce,ny,zh,zh-TW,co,hr,cs,da,en,et,tl,fi,fy,gl,ka,de,el,gu,ht,ha,ha,iw,hi,hmn,hu,is,ig,ga,it,ja,jw,kn,kk,km,ko,ku,ky,lo,la,lv,lt,lb,mk,mg,ms,ml,mt,mr,mn,my,ne,no,ps,fa,pl,pt,pa,ro,ru,sm,gd,sr,st,sn,sd,sk,sl,so,es,su,sw,sv,tg,ta,te,th,tr,uk,ur,uz,vi,cy,xh,yi,yo,zu" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
